@@ -1,3 +1,7 @@
+2015-04-30  Alan Modra  <amodra@gmail.com>
+
+	* gcc.dg/pr65408.c: New.
+
 2015-04-29  Thomas Schwinge  <thomas@codesourcery.com>
 
 	Backport from trunk r222564:
